# realty

./: .env.example  README.md  pyproject.toml
core/: settings.py  urls.py
listings/: models.py  urls.py  views.py
listings/migrations/: 0001_initial.py
templates/: base.html
templates/admin/: base_site.html
templates/listings/: index.html
